--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -61,7 +61,7 @@ custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🇨🇳 自动管理`url-test`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 自动管理`url-test`[]🇺🇲 美国节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇭🇰 香港节点`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=♻️ 全局最低延迟节点`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港节点`url-test`(港|香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇲🇴 澳门节点`url-test`(澳|澳门|MO)`http://www.gstatic.com/generate_204`300,,50
