--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -10,6 +10,9 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🚀 GFW代理列表,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
@@ -31,9 +34,6 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
@@ -46,35 +46,37 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇨🇳 自动管理`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=Ⓜ️ OPENAI`select`[]🇸🇬 狮城节点`[]🚀 节点选择`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]DIRECT
-custom_proxy_group=📲 电报消息`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📹 油管视频`select`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎥 奈飞视频`select`[]🚀 节点选择`[]🎥 奈飞节点`[]🚀 节点选择`[]🇸🇬 狮城节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 巴哈姆特`select`[]🚀 节点选择`[]🇨🇳 台湾节点`[]🚀 节点选择`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🇨🇳 台湾节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🚀 手动切换
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软`select`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]DIRECT`[]🚀 节点选择`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 节点选择`(网易|音乐|解锁|Music|NetEase)
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
+custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=Ⓜ️ OPENAI`select`[]🇸🇬 狮城节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=📲 电报消息`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=📹 油管视频`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🎥 奈飞视频`select`[]🎥 奈飞节点`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=📺 哔哩哔哩`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🌍 国外媒体`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]DIRECT`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🚀 手动切换
-custom_proxy_group=🇨🇳 自动管理`fallback`[]🇭🇰 香港节点`[]🇲🇴 澳门节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🇺🇲 美国节点`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]♻️ 全局最低延迟节点`[]DIRECT
 custom_proxy_group=♻️ 全局最低延迟节点`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港节点`url-test`(港|香港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇲🇴 澳门节点`url-test`(澳|澳门|MO)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港澳门节点`url-test`(港|香港|澳门|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 欧洲节点`url-test`(英国|德国|法国|荷兰)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇦🇺 澳洲节点`url-test`(澳洲|澳大|悉尼)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`url-test`(NF|奈飞|解锁|Netflix|NETFLIX|Media)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🎮 游戏节点`select`(Game|游戏|游)
 ;设置分组标志位
 
 enable_rule_generator=true
