新增备用节点组

--- a/ACL4SSR_Online_Mini.ini
+++ b/ACL4SSR_Online_Mini.ini
@@ -26,7 +26,8 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用节点组`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔯 备用节点组`select`(Next generation|Trojan)
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=Ⓜ️ OPENAI`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
