--- a/ACL4SSR_Online_Mini.ini
+++ b/ACL4SSR_Online_Mini.ini
@@ -29,11 +29,11 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用节点组`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🔯 备用节点组`select`(Next generation|Trojan)
 custom_proxy_group=🚀 手动切换`select`.*
-custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=Ⓜ️ OPENAI`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=Ⓜ️ OPENAI`select`[]🇸🇬 狮城节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🇭🇰 香港澳门节点`url-test`(港|香港|澳门|HK|Hong Kong|Next generation)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美洲节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|加拿大)`http://www.gstatic.com/generate_204`300,,50
