--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -10,6 +10,9 @@
 ;增强国外GFW：支持
 
 ;设置规则标志位
+ruleset=🎯 直连列表,https://raw.githubusercontent.com/casojie/clash_rule/master/DirectList.list
+ruleset=🚀 代理列表,https://raw.githubusercontent.com/casojie/clash_rule/master/ProxyList.list
+
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/ChinaDNS.list
@@ -91,6 +94,8 @@ custom_proxy_group=🎮 游戏平台`select`[]🎯 全球直连`[]🚀 主节点
 custom_proxy_group=🎶 网易音乐`select`[]🎯 全球直连`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎯 直连列表`select`[]DIRECT`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换
+custom_proxy_group=🚀 代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🇭🇰 香港澳门节点`url-test`(港|香港|澳门|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美洲节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|United States|加拿大)`http://www.gstatic.com/generate_204`300,,50
