修改节点规律规则

--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -112,9 +112,10 @@ custom_proxy_group=🎮 游戏节点`select`(Game|游戏|游)
 
 enable_rule_generator=true
 overwrite_original_rules=true
+skip_failed_links=true
 
 #过滤节点，正则匹配
-exclude_remarks=(重置|流量|用户|本站|漏洞|永久虚通路|车|邀|免翻|邀请|域名|机场|刷新|禁止|备用登录|计划|面板|忘记|到期|过期|套餐|官网|更多|关注|25倍率|增加|持续|渠道|购买|QQ|二手)
+exclude_remarks=(重置|流量|用户|本站|漏洞|车|邀|免翻|邀请|域名|机场|刷新|禁止|备用登录|计划|面板|忘记|到期|过期时间|套餐|官网|更多|关注|25倍率|增加|持续|渠道|购买|QQ|二手)
 
 ;clash_rule_base=https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GeneralClashConfig.yml
 
