--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -76,8 +76,8 @@ ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用节点组`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
-custom_proxy_group=🔯 备用节点组`select`(Next generation|ASYNCHRONOUS|Trojan|VMess)
+custom_proxy_group=🚀 主节点选择`select`[]🇭🇰 香港澳门节点`[]🔯 备用机场节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🔯 备用机场节点`select`!!GROUPID=1
 custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🚀 GFW代理列表`select`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇸🇬 狮城节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=💬 OpenAi`select`[]🇸🇬 狮城节点`[]🇺🇲 美洲节点`[]🇰🇷 韩国节点`[]🇩🇪 欧洲节点`[]🇦🇺 澳洲节点`[]🚀 主节点选择`[]🇭🇰 香港澳门节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🎥 奈飞节点`[]🎮 游戏节点`[]🚀 手动切换`[]DIRECT
